Mise en forme composant 'tag': Correction border radius à 5px pour version mobile (jusqu'à 768px)

--- a/src/components/tag/index.css
+++ b/src/components/tag/index.css
@@ -18,5 +18,6 @@
 @media screen and (max-width: 768px) {
 	.tags_li {
 		font-size: 10px;
+		border-radius: 5px;
 	}
 }
